# jarviscore-framework

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOGFOODING_LOG.md  LICENSE  MANIFEST.in  README.md  TESTING_GUIDE.md  TRADEMARK.md  benchmark_performance.py  benchmark_results.txt  docker-compose.infra.yml  docker-compose.nexus.yml  mkdocs.yml  prometheus.yml  pyproject.toml  pytest.ini  test_usability.py
.github/: PUBLISHING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: docs.yml  issue-triage.yml  publish.yml
CLA/: CORPORATE.md  INDIVIDUAL.md
_planning/: DOGFOODING_LOG.md
brand-assets/palette/: index.html
core/: mesh.py
examples/: autoagent_distributed_example.py  calculator_agent_example.py  cloud_deployment_example.py  content_pipeline.py  custom_profile_decorator.py  custom_profile_wrap.py  customagent_cognitive_discovery_example.py  customagent_distributed_example.py  customagent_p2p_example.py  ex1_financial_pipeline.py  ex2_research_node1.py  ex2_research_node2.py  ex2_research_node3.py  ex2_synthesizer.py  ex3_support_swarm.py  ex4_content_pipeline.py  fastapi_integration_example.py  financial_pipeline.py  llm_cognitive_discovery_example.py  multi_agent_workflow.py  quickstart.py  research_agent_example.py  research_node_1.py  research_node_2.py  research_node_3.py  research_synthesizer.py  standalone_agent_example.py  support_swarm.py  unified_dx_example.py
examples/investment_committee/: .dockerignore  .env.example  Dockerfile  README.md  committee.py  dashboard.py  docker-compose.yml  portfolio.json  requirements.txt  supervisord.conf
examples/investment_committee/agents/: base.py  committee_chair.py  financial_analyst.py  knowledge_agent.py  market_analyst.py  memo_writer.py  risk_officer.py  technical_analyst.py
examples/investment_committee/static/: app.js  style.css
examples/investment_committee/templates/: base.html  history.html  index.html  memos.html  portfolio.html  run.html  system.html
harnesses/: README.md  dx_autoagent.py  dx_customagent.py  dx_goalmode.py  prod_autoagent_swarm.py  prod_customagent_swarm.py
hooks/: embed_markdown.py
jarviscore/: __init__.py
jarviscore/adapter/: __init__.py  decorator.py
jarviscore/auth/: __init__.py  manager.py  oauth_flow.py
jarviscore/browser/: __init__.py  capture.py  cdp.py  controller.py  dispatcher.py  interactions.py  profiles.py  protocol.py  route_dispatcher.py  session.py  snapshot.py  trace.py
jarviscore/cli/: __main__.py  atom.py  check.py  memory.py  nexus.py  scaffold.py  smoketest.py
jarviscore/config/: __init__.py  settings.py
jarviscore/context/: __init__.py  context_manager.py  distillation.py  jarvis_context.py  memory.py  truth.py
jarviscore/contracts/: __init__.py  hitl.py  meeting_note.py  task.py
jarviscore/core/: agent.py  mesh.py
jarviscore/docs/: API_REFERENCE.md  AUTOAGENT_GUIDE.md  CHANGELOG.md  CNAME  CONFIGURATION.md  CUSTOMAGENT_GUIDE.md  ENTERPRISE.md  GETTING_STARTED.md  TROUBLESHOOTING.md  USER_GUIDE.md  changelog.md  getting-started.md  index.md
jarviscore/docs/concepts/: agent-personas.md  agents.md  architecture.md  index.md  language-models.md  memory.md  model-routing.md  nexus.md  p2p.md  planning.md  system-bundles.md
jarviscore/docs/examples/: content-pipeline.md  financial-pipeline.md  index.md  investment-committee.md  research-network.md  support-swarm.md
jarviscore/execution/: __init__.py  code_registry.py  coder_sandbox.py  generator.py  intent_normalizer.py  llm.py  result_handler.py  sandbox.py  search.py  validation.py
jarviscore/hitl/: __init__.py  queue.py
jarviscore/integrations/: __init__.py  chat.py  fastapi.py  seed_registry.py
jarviscore/kernel/: __init__.py  cognition.py  epistemic.py  hitl.py  kernel.py  lease.py  state.py  subagent.py  tracing.py
jarviscore/mailbox/: __init__.py  mailbox.py
jarviscore/memory/: __init__.py  athena_client.py  athena_memory.py  episodic.py  ltm.py  scratchpad.py  unified.py
jarviscore/nexus/: __init__.py  call_proxy.py  client.py  lifecycle.py  models.py  providers.py  store.py
jarviscore/orchestration/: __init__.py  claimer.py  dependency.py  engine.py  fanout.py  shift_planner.py  state.py  status.py  workflow_builder.py
jarviscore/p2p/: coordinator.py  keepalive.py  messages.py  peer_client.py  peer_tool.py  swim_manager.py
jarviscore/planning/: __init__.py  classifier.py  evaluator.py  goal_context.py  planner.py
jarviscore/profiles/: __init__.py  agent_profile.py  autoagent.py  customagent.py  reasoningagent.py
jarviscore/rag/: __init__.py  chunking.py  embedding.py  evidence.py  faiss_store.py  pipeline.py
jarviscore/search/: __init__.py  internet_search.py
jarviscore/storage/: __init__.py  azure.py  base.py  local.py  redis_store.py
jarviscore/telemetry/: __init__.py  events.py  metrics.py  tracer.py
jarviscore/testing/: __init__.py  mocks.py
nexus/migrations/: 001_initial_schema.sql
nexus/seeds/: seed_local.py
profiles/: autoagent.py
tests/: test_03_analyst_with_framework.py  test_04_assistant_with_framework.py  test_05_integration.py  test_06_real_llm_integration.py  test_07_distributed_single_node.py  test_08_distributed_multi_node.py  test_09_distributed_autoagent.py  test_10_distributed_customagent.py  test_13_dx_improvements.py  test_15_llm_cognitive_discovery.py  test_16_unified_dx_flow.py  test_17_session_context.py  test_18_mesh_diagnostics.py  test_19_async_requests.py  test_20_load_balancing.py  test_21_mock_testing.py  test_auth_manager.py  test_autoagent.py  test_autoagent_day4.py  test_autoagent_dx.py  test_autoagent_kernel.py  test_context_manager.py  test_convergence_fixes.py  test_customagent.py  test_dependency_redis.py  test_epistemic_ledger.py  test_epistemic_reasoning.py  test_failure_ledger.py  test_fanout.py  test_function_registry.py  test_hitl_queue.py  test_integration.py  test_internet_search.py  test_issue_32.py  test_issue_33.py  test_issue_34.py  test_issue_35.py  test_issue_36.py  test_issue_37.py  test_issue_38.py  (+34 more)
(+292 files in other folders)
