[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarviscore"
version = "0.1.0"
description = "P2P distributed agent framework with LLM code generation and event-sourced state management"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["agents", "p2p", "llm", "distributed", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
p2p = [
    "swim-p2p>=1.2.0",
    "pyzmq>=25.0.0",
]
state = [
    "redis>=5.0.0",
    "motor>=3.3.0",  # Async MongoDB
    "boto3>=1.28.0",  # S3
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
all = [
    "jarviscore[p2p,state,llm,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/jarviscore"
Documentation = "https://jarviscore.readthedocs.io"
Repository = "https://github.com/yourusername/jarviscore"
Issues = "https://github.com/yourusername/jarviscore/issues"

[tool.setuptools]
packages = ["jarviscore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
