[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarviscore-framework"
version = "1.1.0"
description = "Orchestrate multi-agent systems with peer-to-peer coordination, unified memory, and built-in auth."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ruth Mutua", email = "mutuandinda82@gmail.com"},
    {name = "Muyukani Kizito", email = "muyukani@prescottdata.io"}
]
maintainers = [
    {name = "Prescott Data", email = "info@prescottdata.io"}
]
keywords = ["agents", "p2p", "llm", "distributed", "workflow", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework — schema, config, HTTP
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",

    # LLM Providers — the engine. Always available, zero-config.
    # Developer picks which provider to use via env vars, not pip extras.
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
# P2P mesh — SWIM gossip protocol + ZMQ transport for multi-node deployments
p2p = [
    "swim-p2p",
    "pyzmq",
]
# Web serving — FastAPI integration, dashboard, chat endpoints
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.29.0",
    "beautifulsoup4>=4.12.0",
]
# Redis — distributed workflows, cross-session state, peer routing
redis = [
    "redis>=4.6.0",
]
# Prometheus — metrics and observability
prometheus = [
    "prometheus-client>=0.18.0",
]
# Azure — blob storage backend
azure = [
    "azure-storage-blob>=12.19.0",
]
# Browser — Playwright-based web interaction tools
browser = [
    "playwright>=1.40.0",
]
# RAG — local vector search + embedding for evidence-backed research
rag = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]
# Research — full researcher stack (search + RAG + browser)
# Installs everything the ResearcherSubAgent needs for 1:1 IA parity.
research = [
    "jarviscore-framework[browser,rag]",
    "beautifulsoup4>=4.12.0",
]
memory-athena = [
    # Zero extra Python deps — Athena is called over HTTP.
    # httpx is already in core. Install Athena itself separately:
    #   cd /path/to/athena && docker compose -f docker-compose.local.yml up -d
    # Then set: ATHENA_URL=http://localhost:8080
]
# Everything — production deployment with all capabilities
full = [
    "jarviscore-framework[p2p,web,redis,prometheus,azure,browser,rag,research,memory-athena]",
]
dev = [
    "jarviscore-framework[p2p,web,redis]",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "fakeredis>=2.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Prescott-Data/jarviscore-framework"
Documentation = "https://jarviscore.developers.prescottdata.io/"
Repository = "https://github.com/Prescott-Data/jarviscore-framework"
Issues = "https://github.com/Prescott-Data/jarviscore-framework/issues"

[tool.setuptools]
packages = {find = {}}

[project.scripts]
# After `pip install jarviscore-framework`, these are available as CLI commands:
#   nexus init
#   nexus register github --client-id=... --client-secret=...
#   nexus status / nexus up / nexus list / nexus test
jarviscore = "jarviscore.cli.__main__:main"

[tool.setuptools.package-data]
jarviscore = [
    "docs/*.md",
    "data/.env.example",
    "data/examples/*.py",
    # Nexus local-stack data — bundled so pip install users don't need the repo
    "nexus/_data/docker-compose.nexus.yml",
    "nexus/_data/001_initial_schema.sql",
    # Athena MemOS local-stack compose — bundled for same reason
    "memory/_data/docker-compose.athena.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"
